tests/typing/pass/if.t20
;; If expression.

(: test Bool)
(define test
  (if #t #t #f))
